<?php declare(strict_types=1);

namespace Jawira\CaseConverter\Glue;

abstract class SpaceGluer extends Gluer
{
    const DELIMITER = ' ';
}
