<?php declare(strict_types=1);

namespace Jawira\CaseConverter\Glue;

abstract class UnderscoreGluer extends Gluer
{
    const DELIMITER = '_';
}
